# platform-examples

./: .gitignore  LICENSE.txt  README.md  build.sh  deploy.sh  pyproject.toml  run.sh
containers/: README.md
containers/python/: Dockerfile
deployments/opentofu/: README.md
deployments/opentofu/modules/: README.md
deployments/opentofu/modules/kubernetes/: _variables.tf  main.tf
deployments/opentofu/modules/kubernetes-deployment/: _output.tf  main.tf
deployments/python/: manifests.yaml
kubernetes/: README.md
src/python/: README.md  __init__.py  __main__.py  main.py
src/python/adapters/incoming/: __init__.py  api.py  cli.py
src/python/adapters/outgoing/: logging.py  producer.py  relational_database.py
src/python/domain/: __init__.py  models.py
src/python/ports/: repository.py
tests/: go.mod  go.sum
tests/opentofu/: .gitignore
tests/opentofu/modules/kubernetes/: kubernetes_deployment_test.go  main_test.go
tests/opentofu/resources/kubernetes_deployment/: main.tf  provider.tf
tests/python/: conftest.py
tests/python/adapters/incoming/: test_api.py
tests/python/adapters/outgoing/: test_relational_database.py
tests/python/domain/: __init__.py  test_models.py
tests/python/ports/: __init__.py  test_repository.py
